--- a/social_network/chats/static/css/chat/chat.css
+++ b/social_network/chats/static/css/chat/chat.css
@@ -88,6 +88,7 @@
 .avatar{
     width: calc(1.6vw + 2.3vh);
     height: calc(1.6vw + 2.3vh);
+    border-radius: 1234px;
 }
 .name-group{
     max-width: calc(12.7vw + 17.9vh);
@@ -221,7 +222,7 @@ input[type="checkbox"]:checked::after {
 }
 .modal-set-name{
     width: calc(17vw + 24vh);
-    height: calc(22vw + 31.1vh);
+    height: calc(25     vw + 31.1vh);
     display: flex;
     flex-direction: column;
     background-color: white;
