--- a/social_network/chats/static/css/chat/chat.css
+++ b/social_network/chats/static/css/chat/chat.css
@@ -39,15 +39,27 @@
     border-radius: calc(0.3vw + 0.5vh);
     padding:  calc(0.5vw + 0.6vh) calc(0.3vw + 0.5vh);
     color: rgba(129, 129, 141, 1);
+    height: calc(0.3vw + 1.5vh);
+    font-size: calc(0.6vw + 0.8vh);
 }
-
+input::placeholder{
+    margin-top: calc(0.3vw + 0.5vh);
+    margin-bottom: calc(0.3vw + 0.5vh);
+}
+.messages-wrapper{
+    height: calc(17.2vw + 32.6vh);
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
 .messages-class{
+    width: calc(18.5vw + 26.1vh);
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     gap: calc(0.3vw + 0.5vh);
     max-height: calc(17.2vw + 32.6vh);
-    height: calc(17.2vw + 32.6vh);
+    height: fit-content;
     min-height: 0px;
     min-height: auto;
     overflow-y: scroll;
@@ -60,7 +72,7 @@
     flex-direction: column;
     padding: calc(0.3vw + 0.5vh);
     background-color: rgba(205, 206, 210, 1);
-    width: min-content;
+    width: auto;
     border-radius: calc(0.2vw + 0.3vh);
     max-width: calc(18.5vw + 26vh);
 }
@@ -258,4 +270,25 @@ input[type="checkbox"]:checked::after {
     width: calc(0.5vw + 0.8vh);
     height:calc(0.5vw + 0.8vh);
 
+}
+.message-content{
+    font-size: calc(0.5vw + 0.8vh);
+}
+.message-author{
+    width: max-content;
+    font-size: calc(0.5vw + 0.3vh);
+    color: rgba(84, 60, 82, 1);
+}
+.message-time{
+    font-size: calc(0.3vw + 0.5vh);
+}
+.author-people{
+    margin-right: auto;
+    background-color: white;
+    border: calc(0.03vw + 0.05vh) rgba(233, 229, 238, 1) solid;
+}
+.message-and-time{
+    display: flex;
+    gap: calc(0.3vw + 0.5vh);
+    align-items: flex-end;
 }
